# hiwave-macos

./: .gitignore  .mcp.json  100pct-pixel-parity-plan.md  99pctpairtyplan.md  CLAUDE.md  CSS_GRID_IMPLEMENTATION_PLAN.md  Cargo.toml  DOMINATION_PLAN.md  GPU_GRADIENT_IMPLEMENTATION_NOTES.md  GPU_GRADIENT_ZORDER_FIX_PLAN.md  GRADIENT_INTENSIVE_TEST_PLAN.md  PARITY_FIX_SESSION.md  PARITY_IMPROVEMENT_PLAN.md  PARITY_PROGRESS.md  Parity80Hybrid Push plan.md  README.md  RUSTKIT_INTEGRATION_STATUS.md  RUSTKIT_RENDERING_FIX_PLAN.md  SIZING_BUG_INVESTIGATION.md  fix_parity_worst_cases.md  nextplan_from_results.md  perf_baseline.json  phase4-remediation-plan.md  testhardningand98pctparity.md
.github/workflows/: parity-metrics.yml  parity.yml
.ralph/: PRD.md  config.sh  init.sh  mcp-server-hiwave-parity.ts  package-lock.json  package.json  tsconfig.json  verify_parity.sh
baselines/: README.md  metadata.json
builtins-captures/: .gitignore  about.layout.json  chrome.layout.json  new_tab.layout.json  settings.layout.json  shelf.layout.json
crates/hiwave-analytics/src/: database.rs
crates/hiwave-app/: Cargo.toml
crates/hiwave-app/src/: chrome_webview_enum.rs  content_webview.rs  content_webview_enum.rs  content_webview_trait.rs  main.rs  shield_adapter.rs  state.rs  webview_rustkit.rs  webview_rustkit_chrome.rs
crates/hiwave-app/src/import/: converter.rs
crates/hiwave-app/src/ipc/: commands.rs  mod.rs
crates/hiwave-app/src/platform/: macos.rs  windows.rs
crates/hiwave-app/src/ui/: about.html  chrome.html  chrome_rustkit.html  console_inject.js  context_menu.js  inspector.html  inspector_inject.js  settings.html  shelf.html
crates/hiwave-app/tests/: integration_tests.rs  rustkit_unit_tests.rs
crates/hiwave-app/tests/integration/: engine_lifecycle.rs  mod.rs  rendering_pipeline.rs
crates/hiwave-app/tests/support/: assertions.rs  mod.rs  test_engine.rs  test_frame.rs
crates/hiwave-core/: Cargo.toml
crates/hiwave-core/src/: error.rs
crates/hiwave-smoke/: Cargo.toml
crates/rustkit-compositor/: Cargo.toml
crates/rustkit-engine/: Cargo.toml
crates/rustkit-image/: Cargo.toml
crates/rustkit-layout/: Cargo.toml
crates/rustkit-layout/src/: flex.rs  grid.rs  intrinsic_cache.rs  lib.rs  margin_collapse.rs  text.rs
crates/rustkit-text/: Cargo.toml
crates/rustkit-text/src/: bidi.rs  lib.rs  line_break.rs  macos.rs  segmentation.rs
crates/rustkit-viewhost/: Cargo.toml
crates/rustkit-viewhost/src/: lib.rs  macos.rs  traits.rs
docs/: AIORCH.md  HEADLESS_MODE_IMPLEMENTATION.md  INTEGRATION_TEST_IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_PLAN.md  INTEGRATION_TEST_PROGRESS_UPDATE.md  INTEGRATION_TEST_SUMMARY.md  VISUAL_DIFF_POLICY.md  VISUAL_SMOKE_TEST_GUIDE.md
docs/integration_test_templates/: README.md  example_tests.rs  test_engine.rs
fixtures/: inline-wrapper.html  minmaxclamp.html  pseudo-elements.html
fixtures/sizing-micro/: flex-width.html  min-height.html  percent-width.html
fixtures/transform-micro/: origin.html  rotate.html  scale.html  translate.html
goldens/: borders_basic.layout.json  borders_basic.meta.json  forms_basic.layout.json  forms_basic.meta.json  gradient_basic.layout.json  gradient_basic.meta.json  image_gallery.layout.json  image_gallery.meta.json  img_basic.layout.json  img_basic.meta.json  inline-wrapper.layout.json  inline-wrapper.meta.json  interactive.layout.json  interactive.meta.json  layout_comprehensive.layout.json  layout_comprehensive.meta.json  minmaxclamp.layout.json  minmaxclamp.meta.json  multisurface_chrome.layout.json  multisurface_chrome.meta.json  multisurface_content.layout.json  multisurface_content.meta.json  pseudo-elements.layout.json  pseudo-elements.meta.json  scroll_long.layout.json  scroll_long.meta.json  shadow_basic.layout.json  shadow_basic.meta.json  typography.layout.json  typography.meta.json
metrics/: 20260116_043625_a6b1ee56405d7424537ac6e1f634ad21f8a4a3ce.json  20260116_144631_1e41b936d3ecd938bf88cfbfde46ee5dfaee138a.json  history.csv
multisurface-captures/: chrome.perf.json  content.perf.json  summary.json
parity-baseline/: assignments.json  baseline_phase1_start.json  baseline_report.json  oracle_results.json  parity_test_results.json
parity-baseline/captures/: about.layout.json  about.ppm  article-typography.layout.json  article-typography.ppm  card-grid.layout.json  card-grid.ppm  chrome_rustkit.layout.json  chrome_rustkit.ppm  css-selectors.layout.json  css-selectors.ppm  flex-positioning.layout.json  flex-positioning.ppm  form-elements.layout.json  form-elements.ppm  gradient-backgrounds.layout.json  gradient-backgrounds.ppm  image-gallery.layout.json  image-gallery.ppm  new_tab.layout.json  new_tab.ppm  settings.layout.json  settings.ppm  shelf.layout.json  shelf.ppm  sticky-scroll.layout.json  sticky-scroll.ppm
parity-baseline/workorders/: sizing_layout.json  top_failures.json
parity-results/: .gitignore
parity-tests/: bg-multilayer.html
scripts/: aiorch_local.sh  builtins_capture.sh  builtins_diff.sh  canary_golden_gate.sh  capture_goldens.sh  compare_layouts.py  extract_parity_metrics.py  generate_baselines.py  live_site_smoke.sh  multisurface_canary.sh  parity_aggregate.py  parity_archive.py  parity_baseline.py  parity_compare.py  parity_gate.py  parity_gate.sh  parity_lib.py  parity_rerun.py  parity_summary.py  parity_swarm.py  parity_test.py  run-rustkit.sh  run-webkit.sh  static_suite_capture.sh  visual_regression.sh  visual_test_runner.sh  websuite_capture.sh  websuite_diff.sh
static-suite-captures/: .gitignore
static-web-suite/: manifest.json
static-web-suite/basic-css/: index.html  styles.css
tools/parity_oracle/: attribute_diff.mjs  capture_baseline.mjs  capture_chrome.mjs  classify_diff.mjs  compare_baseline.mjs  compare_pixels.mjs  deterministic.mjs  export_styles.mjs  package.json  run_oracle.mjs
websuite/: manifest.json
websuite/captures/: article-typography.perf.json  card-grid.perf.json  form-elements.perf.json  gradient-backgrounds.perf.json  image-gallery.perf.json  sticky-scroll.perf.json  summary.json
websuite/common/: parity-reset.css
(+86 files in other folders)
