[package]
name = "hiwave-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HiWave browser application with WebView rendering"

[[bin]]
name = "hiwave"
path = "src/main.rs"

[features]
default = []
# RustKit is now the default for content rendering on macOS
# WRY is still used for Chrome and Shelf UI components

[dependencies]
# WebView
wry = { workspace = true }
tao = { workspace = true }
muda = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# URL handling
url = { workspace = true }
urlencoding = "2.1"

# Platform
dirs = { workspace = true }

# File dialogs
rfd = { workspace = true }

# Workspace crates
hiwave-core = { workspace = true }
hiwave-shell = { workspace = true }
hiwave-shield = { workspace = true }
hiwave-vault = { workspace = true }
hiwave-analytics = { workspace = true }

# RustKit engine (default on macOS)
[target.'cfg(target_os = "macos")'.dependencies]
rustkit-engine = { workspace = true }
rustkit-viewhost = { workspace = true }
rustkit-text = { workspace = true }
rustkit-compositor = { workspace = true }
wgpu = "24"
tokio = { version = "1.42", features = ["rt", "time"] }
