[package]
name = "rustkit-text"
version = "0.1.0"
edition = "2021"
description = "Text shaping and font access for RustKit (platform-specific)"
authors = ["HiWave Team"]
license = "MIT"

[dependencies]
thiserror = "1.0"
unicode-bidi = "0.3"
unicode-segmentation = "1.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_DirectWrite",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "20.1"
core-graphics = "0.23"
core-foundation = "0.9"
foreign-types-shared = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


