[package]
name = "rustkit-viewhost"
version = "0.1.0"
edition = "2021"
description = "Platform ViewHost layer for RustKit browser engine"
authors = ["HiWave Team"]
license = "MIT"

[dependencies]
# RustKit core (for input event types)
rustkit-core = { path = "../rustkit-core" }

# Error handling
thiserror = "1.0"

# Tracing
tracing = "0.1"

# Windows API bindings (conditional)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# macOS dependencies (conditional)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-foundation = "0.9"
objc = "0.2"
objc2 = "0.5"
raw-window-handle = "0.6"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
